Initial spike of declarative entitlements DSL