@@ -48,3 +48,22 @@ tasks.register('dumpInstrumentedMethods', JavaExec) {
   classpath = sourceSets.test.runtimeClasspath
   mainClass = 'org.elasticsearch.entitlement.initialization.DynamicInstrumentationUtils'
 }
+
+tasks.named('compileJava') {
+  options.release.unset()
+  options.compilerArgs.addAll(["--add-exports", "jdk.jlink/jdk.tools.jlink.internal=org.elasticsearch.entitlement"])
+  options.compilerArgs.addAll(["--add-exports", "jdk.internal.vm.ci/jdk.vm.ci.services=org.elasticsearch.entitlement"])
+  options.compilerArgs.addAll(["--add-exports", "java.base/sun.net.www=org.elasticsearch.entitlement"])
+  options.compilerArgs.addAll(["--add-exports", "java.base/sun.net.www.protocol.ftp=org.elasticsearch.entitlement"])
+  options.compilerArgs.addAll(["--add-exports", "java.base/sun.net.www.protocol.file=org.elasticsearch.entitlement"])
+  options.compilerArgs.addAll(["--add-exports", "java.base/sun.net.www.protocol.jar=org.elasticsearch.entitlement"])
+  options.compilerArgs.addAll(["--add-exports", "java.base/sun.net.www.protocol.http=org.elasticsearch.entitlement"])
+  options.compilerArgs.addAll(["--add-exports", "java.base/sun.net.www.protocol.https=org.elasticsearch.entitlement"])
+  options.compilerArgs.addAll(["--add-exports", "java.base/sun.net.www.protocol.mailto=org.elasticsearch.entitlement"])
+  options.compilerArgs.addAll(["--add-exports", "java.base/sun.nio.ch=org.elasticsearch.entitlement"])
+  options.compilerArgs.addAll(["--add-exports", "java.base/jdk.internal.foreign=org.elasticsearch.entitlement"])
+  options.compilerArgs.addAll(["--add-exports", "java.base/jdk.internal.foreign.abi=org.elasticsearch.entitlement"])
+  options.compilerArgs.addAll(["--add-exports", "java.base/jdk.internal.foreign.layout=org.elasticsearch.entitlement"])
+  options.compilerArgs.addAll(["--add-exports", "java.net.http/jdk.internal.net.http=org.elasticsearch.entitlement"])
+  options.compilerArgs.addAll(["--add-exports", "jdk.jdi/com.sun.tools.jdi=org.elasticsearch.entitlement"])
+}
